[FEAT] Visualición de tablero
Se añadió que se cargue el tablero desde un archivo .txt, en base a los caracteres de ese archivo se convierte al numero que corresponde a la imagen, una vez hecho se cargan en el tablero mostrando asi el tablero con las imagenes correspondientes. Se corrigió el movimiento del personaje para que se muestre solo una vez la imagen y no se quede en el cuadro anterior donde estaba en el tablero. Por último se corrigió un bug en la ventana AboutUs, ahora se muestra por encima del Stack Pane y se mejoró los contrastes del texto.

--- a/src/main/resources/com/mycompany/sokovangame/AboutUs.fxml
+++ b/src/main/resources/com/mycompany/sokovangame/AboutUs.fxml
@@ -9,7 +9,7 @@
 
 <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="469.0" prefWidth="626.0" stylesheets="@../../../styles/aboutUs.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="469.0" prefWidth="624.0">
+      <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="469.0" prefWidth="624.0" styleClass="root">
          <center>
             <StackPane prefHeight="237.0" prefWidth="596.0" BorderPane.alignment="CENTER">
                <children>
