--- a/src/main/resources/styles/aboutUs.css
+++ b/src/main/resources/styles/aboutUs.css
@@ -1,8 +1,9 @@
-.root {
+
+
+.backgroundMain{
     -fx-background-image: url("../images/i.jpeg");
     -fx-background-size: 100% 100%;
     -fx-opacity: 0.98;
-    -fx-font-family: 'Minecraft', 'Arial', sans-serif;
 }
 
 .title {
