--- a/src/main/resources/com/mycompany/sokovangame/Game.fxml
+++ b/src/main/resources/com/mycompany/sokovangame/Game.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="500.0" prefWidth="636.0" styleClass="backgroundMain" stylesheets="@../../../styles/GameView.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.sokovangame.GameController">
+<BorderPane prefHeight="500.0" prefWidth="636.0" styleClass="backgroundMain" stylesheets="@../../../styles/GameView.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.sokovangame.GameController">
    <top>
       <VBox prefHeight="88.0" prefWidth="636.0" BorderPane.alignment="CENTER">
          <children>
@@ -135,7 +135,7 @@
          </children></VBox>
    </bottom>
    <center>
-      <VBox prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: #F5DEB3;" BorderPane.alignment="CENTER">
+      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
             <GridPane fx:id="BoardGame" alignment="CENTER" focusTraversable="true" prefHeight="364.0" prefWidth="404.0" VBox.vgrow="ALWAYS">
                <columnConstraints>
