--- a/src/main/resources/styles/nextlevelview.css
+++ b/src/main/resources/styles/nextlevelview.css
@@ -1,17 +1,39 @@
-/*
- * Empty Stylesheet file.
- */
-
 .backgroundMain{
     -fx-background-image: url("../images/i.jpeg");
     -fx-background-size: 100% 100%;
-    -fx-opacity: 0.89;
+    -fx-opacity: 0.98;
 }
-
 .logo{
     -fx-background-image: url("../images/logoM.png");
     -fx-background-size: 100% 100%;
     -fx-opacity: 0.98;
+}
+
+.text1 {
+    -fx-background-color: transparent; /* Color de fondo específico para Button2 */
+    -fx-text-fill: white; /* Color del texto blanco */
+    -fx-font-size: 30; /* Tamaño de la fuente específico para Button2 */
+    -fx-background-insets: 0, 0, 2;
+    -fx-border-radius: 50%; /* Bordes redondeados */
+    -fx-font-family: "Yu Gothic"; /* Cambia a la fuente deseada */
+}
+
+.text2 {
+    -fx-background-color: transparent; /* Color de fondo específico para Button2 */
+    -fx-text-fill: white; /* Color del texto blanco */
+    -fx-font-size: 23; /* Tamaño de la fuente específico para Button2 */
+    -fx-background-insets: 0, 0, 2;
+    -fx-border-radius: 50%; /* Bordes redondeados */
+    -fx-font-family: "Yu Gothic"; /* Cambia a la fuente deseada */
+}
+
+.text3 {
+    -fx-background-color: transparent; /* Color de fondo específico para Button2 */
+    -fx-text-fill: white; /* Color del texto blanco */
+    -fx-font-size: 17; /* Tamaño de la fuente específico para Button2 */
+    -fx-background-insets: 0, 0, 2;
+    -fx-border-radius: 50%; /* Bordes redondeados */
+    -fx-font-family: "Yu Gothic"; /* Cambia a la fuente deseada */
 }
 
 .Button {
@@ -46,14 +68,4 @@
 .Button2:hover {
     -fx-scale-x: 0.9; /* Reduce el tamaño a 90% en X */
     -fx-scale-y: 0.9; /* Reduce el tamaño a 90% en Y */
-}
-
-
-.text1 {
-    -fx-background-color: transparent; /* Color de fondo específico para Button2 */
-    -fx-text-fill: black; /* Color del texto blanco */
-    -fx-font-size: 17px; /* Tamaño de la fuente específico para Button2 */
-    -fx-background-insets: 0, 0, 2;
-    -fx-border-radius: 50%; /* Bordes redondeados */
-    -fx-font-family: "Yu Gothic"; /* Cambia a la fuente deseada */
 }
