--- a/src/main/resources/styles/startmenuview.css
+++ b/src/main/resources/styles/startmenuview.css
@@ -14,8 +14,6 @@
     -fx-opacity: 0.98;
 }
 
-
-
 .Button {
     -fx-background-color: #2E8B57; /* Color de fondo verde */
     -fx-text-fill: white; /* Color del texto blanco */
@@ -50,7 +48,8 @@
     -fx-scale-y: 0.9; /* Reduce el tamaño a 90% en Y */
 }
 
-.Button3 {
+
+.text1 {
     -fx-background-color: transparent; /* Color de fondo específico para Button2 */
     -fx-text-fill: black; /* Color del texto blanco */
     -fx-font-size: 17px; /* Tamaño de la fuente específico para Button2 */
