Updated view appearance

--- a/src/main/resources/styles/GameView.css
+++ b/src/main/resources/styles/GameView.css
@@ -1,7 +1,7 @@
 
 
 .backgroundMain{
-    -fx-background-image: url("../images/i.jpeg");
+    -fx-background-image: url("../images/a.jpg");
     -fx-background-size: 100% 100%;
     -fx-opacity: 0.98;
 }
