--- a/src/main/resources/com/mycompany/sokovangame/ChooseLevelView.fxml
+++ b/src/main/resources/com/mycompany/sokovangame/ChooseLevelView.fxml
@@ -10,7 +10,7 @@
 
 <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="469.0" prefWidth="626.0" stylesheets="@../../../styles/chooselevelview.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.sokovangame.ChooseLevelViewController">
    <children>
-      <VBox prefHeight="200.0" prefWidth="100.0" styleClass="backgroundMain">
+      <VBox prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: #744E3B;">
          <children>
             <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: #2E8B57;" VBox.vgrow="ALWAYS">
                <children>
@@ -24,7 +24,7 @@
                   <Insets left="12.0" right="12.0" top="23.0" />
                </VBox.margin>
             </VBox>
-            <VBox prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: #98FB98;" VBox.vgrow="ALWAYS">
+            <VBox prefHeight="200.0" prefWidth="100.0" VBox.vgrow="ALWAYS">
                <children>
                   <HBox prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
                      <children>
@@ -65,7 +65,7 @@
                   <Insets left="28.0" right="28.0" top="24.0" />
                </VBox.margin>
             </VBox>
-            <VBox prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: #98FB98;" VBox.vgrow="ALWAYS">
+            <VBox prefHeight="200.0" prefWidth="100.0" VBox.vgrow="ALWAYS">
                <children>
                   <HBox prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
                      <children>
