--- a/src/main/resources/com/mycompany/sokovangame/Game.fxml
+++ b/src/main/resources/com/mycompany/sokovangame/Game.fxml
@@ -135,7 +135,7 @@
          </children></VBox>
    </bottom>
    <center>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+      <VBox prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: #F5DEB3;" BorderPane.alignment="CENTER">
          <children>
             <GridPane fx:id="BoardGame" alignment="CENTER" focusTraversable="true" prefHeight="364.0" prefWidth="404.0" VBox.vgrow="ALWAYS">
                <columnConstraints>
