--- a/src/main/resources/com/mycompany/sokovangame/NextLevelView.fxml
+++ b/src/main/resources/com/mycompany/sokovangame/NextLevelView.fxml
@@ -1,22 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="backgroundMain" stylesheets="@../../../styles/nextlevelview.css" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/19" fx:controller="com.mycompany.sokovangame.NextLevelViewController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="backgroundMain" stylesheets="@../../../styles/nextlevelview.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.sokovangame.NextLevelViewController">
    <children>
       <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" VBox.vgrow="ALWAYS">
+            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: #744E3B;" VBox.vgrow="ALWAYS">
                <children>
                   <Label fx:id="txt" />
                   <Label alignment="TOP_CENTER" contentDisplay="CENTER" prefHeight="28.0" prefWidth="421.0" styleClass="text1" text="Congratulations" />
                   <Label styleClass="text2" text="you have gone to the next level, choose" />
                   <Label styleClass="text2" text="which option you want to do" />
                </children>
+               <VBox.margin>
+                  <Insets left="71.0" right="71.0" top="71.0" />
+               </VBox.margin>
             </VBox>
             <VBox prefHeight="200.0" prefWidth="100.0" VBox.vgrow="ALWAYS">
                <children>
