--- a/src/main/resources/styles/nextlevelview.css
+++ b/src/main/resources/styles/nextlevelview.css
@@ -1,5 +1,5 @@
 .backgroundMain{
-    -fx-background-image: url("../images/a.jpg");
+    -fx-background-image: url("../images/k.jpg");
     -fx-background-size: 100% 100%;
     -fx-opacity: 0.98;
 }
