--- a/src/main/resources/styles/helpview.css
+++ b/src/main/resources/styles/helpview.css
@@ -1,5 +1,5 @@
 .backgroundMain{
-    -fx-background-image: url("../images/i.jpeg");
+    -fx-background-image: url("../images/j.jpg");
     -fx-background-size: 100% 100%;
     -fx-opacity: 0.98;
 }
